Add some more Tags in INDX FILE

--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 	<title>Smart Energy Solutions</title>
 </head>
 <body>
-<h1>[paitsh</h1>
-
+<header>
+	<section>
+		<img src="" alt="SES">
+		<p></p>
+	</section>
+</header>
+<main></main>>
+<footer></footer>
 </body>
 </html>
